select dropdown overflow css fix if in card

--- a/uni_ticket_bootstrap_italia_template/static/css/uni_ticket.scss
+++ b/uni_ticket_bootstrap_italia_template/static/css/uni_ticket.scss
@@ -258,9 +258,9 @@ select {
 /**
  * Select wrapper
  */
-.bootstrap-select-wrapper .dropdown.bootstrap-select .dropdown-menu[x-placement=top-start] {
+.card .bootstrap-select-wrapper .dropdown.bootstrap-select .dropdown-menu[x-placement=top-start] {
     top: 0!important;
 }
-.bootstrap-select-wrapper .dropdown.bootstrap-select .dropdown-menu .inner.show {
+.card .bootstrap-select-wrapper .dropdown.bootstrap-select .dropdown-menu .inner.show {
     max-height: 100px !important;
 }
